# multimedia-gst-agmplayer

./: Makefile.am  README  VERSION  agmplayer-kb.c  agmplayer.c  aml_version.h  configure.ac  keyboard.c  keyboard.h  porting.c  porting.h  testbin.c  version_config.sh
src/: AGMPlayer-sample.c  Makefile.am  agmplayer.c  agmplayer.h  agmplayer_es.c  agmplayer_es.h  agmplayer_es_cfgs.h  agmplayer_es_commons.h  agmplayer_es_infos.h  agmplayer_es_msgs.h  agmplayer_es_secure.c  agmplayer_es_secure.h  agmplayer_es_types.h  agmplayer_es_video_color_metadata.c  agmplayer_es_video_color_metadata.h  agmplayer_es_video_color_metadata_internal.h  keyboard.h
